# file-memory

./: .gitignore  AGENTS.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.opencode/agents/: memory-capture.md  memory-maintenance.md  memory-recall.md
.opencode/commands/: mem-get.md  mem-list.md  mem-search.md  mem-store.md  memory-capture.md  memory-get.md  memory-list.md  memory-maintenance.md  memory-recall.md  memory-search.md  memory-store.md
.opencode/skills/file-memory/: SKILL.md
file_memory/: __init__.py  __main__.py  cli.py  config.py  models.py  store.py
tests/: conftest.py  test_store.py
